--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,7 @@ body {
 .container {
     padding-top: 20px;
     background-color: whitesmoke;
-    max-width: 40%;
+    width: 40%;
     padding-bottom: 5px;
 }
 
@@ -79,4 +79,28 @@ button {
 
 .item {
     cursor: pointer;
+}
+
+@media (max-width: 1400px) {
+    .container {
+        width: 45%;
+    }
+}
+
+@media (max-width: 1000px) {
+    .container {
+        width: 55%;
+    }
+}
+
+@media (max-width: 700px) {
+    .container {
+        width: 65%;
+    }
+}
+
+@media (max-width: 500px) {
+    .container {
+        width: 90%;
+    }
 }
