--- a/public/styles.css
+++ b/public/styles.css
@@ -73,7 +73,7 @@ button {
     font-size: 1.5rem;
 }
 
-.col-lg-4 {
+.col-4 {
     text-align: right;
 }
 
@@ -97,10 +97,34 @@ button {
     .container {
         width: 65%;
     }
+
+    h1 {
+        font-size: 1.8rem;
+    }
+
+    p {
+        font-size: 1.2rem;
+    }
+
+    .form-control {
+        font-size: 1.2rem;
+    }
 }
 
 @media (max-width: 500px) {
     .container {
         width: 90%;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    .form-control {
+        font-size: 1rem;
     }
 }
